# open-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  colab.py  inference.py  models.py  openenv.yaml  pyproject.toml
notebooks/: open_er_grpo_colab.ipynb
outputs/evals/: heuristic_baseline.json  random_baseline.json
scripts/: __init__.py  eval_baselines.py  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  data.py  environment.py  rubrics.py  tasks.py
tests/: test_app.py  test_colab.py  test_environment.py  test_integration.py  test_models.py  test_reward_design.py  test_rubrics.py  test_tasks.py
